corrected the reviewer's comments:     kaufman__triangle - декоративный элемент DONE — опечатка feinman -> feynman DONE — header__subtitle - не указан размер шрифта, не обнулили стандартные отступы DONE — размер блока footer не соответствует брифу DONE — footer__column-heading - не обнулили стандартные отступы _______ DONE —.cards__description (Нужно обнулить стандартный нижний отступ.) DONE —.cards__title (Нужно обнулить стандартный нижний отступ.) DONE —..feinman__link (Нужно раскомментировать.) !!! Ревьювер ошибся, верхний обнулять нельзя, он задан по брифу  .footer__column-heading(Нужно обнулить стандартный верхний отступ.) DONE — обнулен нижний DONE (box-sizing не потребовался. тк размер блока по брифу должен быть в селекторе .footer) — .footer__columns (Размер блока footer не соответствует брифу. Здесь вам поможет свойство box-sizing, c значением border-box Подробнее о нем -> https://doka.guide/css/box-sizing/) DONE — .header__subtitle (Не указан размер шрифта, не обнулили стандартные отступы.) DONE — .khan__buy-link (Сейчас наведение на ссылку работает по всей области ссылки, а она идет до конца блока.Вам стоит использовать align-self: flex-start;, чтобы состояние работало только при наведении на текст.) DONE — .khan__buy-link (Цвет элемента не по брифу.)

--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -4,4 +4,6 @@
   font-size: 30px;
   font-weight: normal;
   text-decoration: none;
+  align-self: flex-start;
+  color: #2f80ed;
 }
